--- a/res/drawable/circle_progressbar.xml
+++ b/res/drawable/circle_progressbar.xml
@@ -15,8 +15,20 @@
     limitations under the License.
 -->
 
-<shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:color="@color/gray" android:width="2dp" />
-    <corners android:radius="20dp" />
-    <solid android:color="@color/transparent" />
-</shape>
+<rotate xmlns:android="http://schemas.android.com/apk/res/android"
+	android:fromDegrees="270"
+	android:toDegrees="270">
+	<shape
+		android:innerRadiusRatio="2.5"
+		android:shape="ring"
+		android:thickness="4dp"
+		android:useLevel="true"><!-- this line fixes the issue for lollipop api 21 -->
+
+		<gradient
+			android:angle="0"
+			android:endColor="#FFFFFF"
+			android:startColor="#FFFFFF"
+			android:type="sweep"
+			android:useLevel="false" />
+	</shape>
+</rotate>
