--- a/res/drawable/circle_shape.xml
+++ b/res/drawable/circle_shape.xml
@@ -15,8 +15,13 @@
     limitations under the License.
 -->
 
-<shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:color="@color/gray" android:width="2dp" />
-    <corners android:radius="20dp" />
-    <solid android:color="@color/transparent" />
+<shape
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:shape="ring"
+	android:innerRadiusRatio="2.5"
+	android:thickness="1dp"
+	android:useLevel="false">
+
+	<solid android:color="#CCC" />
+
 </shape>
