--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
     Copyright (c) 2018 Samsung Electronics Co., Ltd.
 
@@ -15,8 +14,18 @@
     limitations under the License.
 -->
 
-<shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:color="@color/gray" android:width="2dp" />
-    <corners android:radius="20dp" />
-    <solid android:color="@color/transparent" />
-</shape>
+<resources>
+
+    <!-- Define standard dimensions to comply with Holo-style grids and rhythm. -->
+
+    <dimen name="margin_tiny">4dp</dimen>
+    <dimen name="margin_small">8dp</dimen>
+    <dimen name="margin_medium">16dp</dimen>
+    <dimen name="margin_large">32dp</dimen>
+    <dimen name="margin_huge">64dp</dimen>
+
+    <!-- Semantic definitions -->
+
+    <dimen name="progressbar_margin">@dimen/margin_large</dimen>
+
+</resources>
